complete end-to-end testing inside container

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -38,6 +38,6 @@ COPY scripts/ ./scripts
 
 COPY deployment_local_variables/ ./deployment_local_variables
 
-# RUN ["chmod", "+x", "/tests/scripts/entrypoint.sh"]
+RUN ["chmod", "+x", "/tests/scripts/entrypoint.sh"]
 
-# ENTRYPOINT ["/tests/scripts/entrypoint.sh"]
+ENTRYPOINT ["/tests/scripts/entrypoint.sh"]
