update Dockerfile for az build

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,13 +1,17 @@
 
-# # # Install packages
 FROM mcr.microsoft.com/azure-cli
 
+# # # Set up build arguments
 ARG AZURERM_PROVIDER
 ARG TERRAFORM_VERSION
 ARG CONFTEST_VERSION=0.24.0
 ARG YQ_VERSION=v4.9.3
 
+# # # Set up env vars
+ENV AZURERM_PROVIDER=$AZURERM_PROVIDER
+ENV TERRAFORM_VERSION=$TERRAFORM_VERSION
 
+# # # Install packages
 RUN apk add --no-cache --virtual  prepare_container jq yamllint
 
 RUN wget https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64 -O /usr/bin/yq && \
@@ -20,19 +24,18 @@ RUN wget https://github.com/open-policy-agent/conftest/releases/download/v${CONF
     tar xzf conftest_${CONFTEST_VERSION}_Linux_x86_64.tar.gz && mv conftest /usr/local/bin && rm -rf conftest_${CONFTEST_VERSION}_Linux_x86_64.tar.gz
 
 
-# # # Copy files
+# # # Starting directory
 WORKDIR  /tests
 
+# # # Copy directories and files
 COPY deployment/ ./deployment
-
-COPY .terraform.lock.hcl ./deployment
 
 COPY opa/ ./opa
 
-COPY scripts/ ./scripts
-
+# # #! temp source 
+#TODO remove
 COPY deployment_local_variables/ ./deployment_local_variables
 
-RUN ["chmod", "+x", "/tests/scripts/entrypoint.sh"]
+COPY pipelines/ ./pipelines
 
-ENTRYPOINT ["/tests/scripts/entrypoint.sh"]
+CMD pipelines/entrypoint.sh
