--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,10 +6,11 @@
 # Local Development
 #
 
-# # #* Targets execution order
-local_development: opa-install \
+
+local: opa-install \
 opa-values-generator \
 docker_build
+
 
 # # #* Targets
 opa-install:
@@ -22,8 +23,8 @@ opa-values-generator:
 
 
 docker_build:
-	docker build --build-arg TERRAFORM_VERSION=1.0.3 -t terraform .
-	docker run -it --rm terraform /bin/bash
+	docker build --build-arg TERRAFORM_VERSION=1.0.3 --build-arg AZURERM_PROVIDER=2.70.0 -t terraform .
+	docker run -it --rm terraform 
 	docker image prune -f
 
 docker_inspect:
@@ -35,10 +36,13 @@ docker_inspect:
 # Azure Pipelines
 #
 
-docker_cloud_build:
-	@echo "==> Test cloud runners..."
-	pipelines/deployment.sh
-	# docker run -it --rm terraform_0.14.0 /bin/bash
-	# docker run -it --rm terraform_0.15.0 /bin/bash
-	# docker run -it --rm terraform_1.0.0 /bin/bash
 
+# # #* Targets
+cloud_build:
+	@echo "==> Test cloud runners..."
+	docker build --build-arg TERRAFORM_VERSION=1.0.1 --build-arg AZURERM_PROVIDER=2.41.0 -t terraform_1.0.1 .
+	docker inspect terraform_1.0.1 | jq '.[].Config.Env'
+
+cloud_run:
+	docker run -it --rm terraform_1.0.1
+	
