add pipeline name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,13 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+name: 'Build Test Images'
 
 trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: ubuntu-20.04
 
 jobs:
-- job: "Terraform_Version"
+- job: "Terraform_"
   strategy:
     matrix:
       min_supported_version:
