--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,11 @@ jobs:
       latest_supported_version:
         TERRAFORM_VERSION: '1.0.0'
     maxParallel: "3"
+  steps:
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          # Write your commands here
+          
+          echo $TERRAFORM_VERSION
