--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,13 @@ jobs:
     matrix:
       min_supported_version:
         TERRAFORM_VERSION: '0.14.0'
+        AZURERM_PROVIDER: '2.41.0'
       mid_supported_version:
         TERRAFORM_VERSION: '0.15.0'
+        AZURERM_PROVIDER: '2.62.0'
       latest_supported_version:
         TERRAFORM_VERSION: '1.0.0'
+        AZURERM_PROVIDER: '2.70.0'
     maxParallel: "3"
   steps:
   - task: AzureCLI@2
@@ -37,5 +40,5 @@ jobs:
       workingDirectory: 'tests/'
       scriptLocation: 'inlineScript'
       inlineScript: |
-        az acr build --registry esAcRegistry --build-arg TERRAFORM_VERSION=1.0.1 --build-arg AZURERM_PROVIDER=2.41.0 --image $TERRAFORM_VERSION:v1 .
+        az acr build --registry esAcRegistry --build-arg TERRAFORM_VERSION=$TERRAFORM_VERSION --build-arg AZURERM_PROVIDER=$AZURERM_PROVIDER --image $TERRAFORM_VERSION:$AZURERM_PROVIDER .
 
