--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,11 +32,9 @@ jobs:
           TERRAFORM_VERSION: "1.0.0"
           AZURERM_PROVIDER: "2.70.0"
     steps:
-      - task: AzureCLI@2
+      - task: Bash@3
         inputs:
-          azureSubscription: "Main Subscription"
-          scriptType: "bash"
+          targetType: "inline"
+          script: |
+            docker build --build-arg TERRAFORM_VERSION=$TERRAFORM_VERSION --build-arg AZURERM_PROVIDER=$AZURERM_PROVIDER -t "$TERRAFORM_VERSION:$AZURERM_PROVIDER" .
           workingDirectory: "tests/"
-          scriptLocation: "inlineScript"
-          inlineScript: |
-            az acr build --registry esAcRegistry --build-arg TERRAFORM_VERSION=$TERRAFORM_VERSION --build-arg AZURERM_PROVIDER=$AZURERM_PROVIDER --image $TERRAFORM_VERSION:$AZURERM_PROVIDER .
