--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,5 +45,5 @@ jobs:
         inputs:
           targetType: "inline"
           script: |
-            docker run -it --rm "$TERRAFORM_VERSION:$AZURERM_PROVIDER"
+            docker run --rm "$TERRAFORM_VERSION:$AZURERM_PROVIDER"
           workingDirectory: "tests/"
