--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,19 +7,7 @@ pool:
   vmImage: ubuntu-20.04
 
 jobs:
-  - job: Create_ACR
-    steps:
-      - task: AzureCLI@2
-        inputs:
-          azureSubscription: "Main Subscription"
-          scriptType: "bash"
-          scriptLocation: "inlineScript"
-          inlineScript: |
-            az group create --name es-test --location uksouth
-            az acr create --resource-group es-test --name esAcRegistry --sku Basic
-
   - job: Terraform_
-    dependsOn: Create_ACR
     strategy:
       matrix:
         min_supported_version:
@@ -32,6 +20,15 @@ jobs:
           TERRAFORM_VERSION: "1.0.0"
           AZURERM_PROVIDER: "2.70.0"
     steps:
+      - task: AzureCLI@2
+        name: "az_login"
+        inputs:
+          azureSubscription: "Main Subscription"
+          scriptType: "bash"
+          scriptLocation: "inlineScript"
+          inlineScript: |
+            az account show
+
       - task: Bash@3
         name: "docker_build"
         inputs:
@@ -39,14 +36,6 @@ jobs:
           script: |
             docker build --build-arg TERRAFORM_VERSION=$TERRAFORM_VERSION --build-arg AZURERM_PROVIDER=$AZURERM_PROVIDER -t "$TERRAFORM_VERSION:$AZURERM_PROVIDER" .
           workingDirectory: "tests/"
-
-      # - task: Bash@3
-      #   name: "update_permissions"
-      #   inputs:
-      #     targetType: "inline"
-      #     script: |
-      #       chmod +x pipelines/*.sh
-      #     workingDirectory: "tests/"
 
       - task: Bash@3
         name: "docker_run"
