--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,9 @@ trigger:
   - main
 
 variables:
-  ARM_TENANT_ID: $(ARM_TENANT_ID)
-  ARM_CLIENT_ID: $(ARM_CLIENT_ID)
-  ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
+  GLOBAL_ARM_TENANT_ID: $(ARM_TENANT_ID)
+  GLOBAL_ARM_CLIENT_ID: $(ARM_CLIENT_ID)
+  GLOBAL_ARM_CLIENT_SECRET: $(ARM_CLIENT_SECRET)
 
 pool:
   vmImage: ubuntu-20.04
