--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,3 +47,7 @@ jobs:
           script: |
             docker run "$TERRAFORM_VERSION:$AZURERM_PROVIDER"
           workingDirectory: "tests/"
+        env:
+          ARM_TENANT_ID: $(TENANT_ID)
+          ARM_CLIENT_ID: $(CLIENT_ID)
+          ARM_CLIENT_SECRET: $(CLIENT_SECRET)
