update docker vars

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ variables:
   ARM_TENANT_ID: $(TENANT_ID)
   ARM_CLIENT_ID: $(CLIENT_ID)
   ARM_CLIENT_SECRET: $(CLIENT_SECRET)
+  ARM_SUBSCRIPTION_ID: $(SUBSCRIPTION_ID)
 jobs:
   - job: Terraform_
     strategy:
@@ -46,5 +47,6 @@ jobs:
         inputs:
           targetType: "inline"
           script: |
-            docker run -e ARM_TENANT_ID=$ARM_TENANT_ID -e ARM_CLIENT_ID=$ARM_CLIENT_ID -e ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET "$TERRAFORM_VERSION:$AZURERM_PROVIDER"
+            docker run -e ARM_TENANT_ID=$ARM_TENANT_ID -e ARM_CLIENT_ID=$ARM_CLIENT_ID -e ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET \
+            -e ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID "$TERRAFORM_VERSION:$AZURERM_PROVIDER"
           workingDirectory: "tests/"
