--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,9 +3,6 @@ name: "Terraform Images"
 trigger:
   - main
 
-pool:
-  vmImage: ubuntu-20.04
-
 variables: # Set the values on Azure DevOps build vars
   ARM_TENANT_ID: $(TENANT_ID)
   ARM_CLIENT_ID: $(CLIENT_ID)
@@ -18,12 +15,19 @@ jobs:
         min_supported_version:
           TERRAFORM_VERSION: "0.15.0"
           AZURERM_PROVIDER: "2.66.0"
+          image: "ubuntu-16.04"
         mid_supported_version:
           TERRAFORM_VERSION: "1.0.0"
           AZURERM_PROVIDER: "2.69.0"
+          image: "ubuntu-18.04"
         latest_supported_version:
           TERRAFORM_VERSION: "1.0.4"
           AZURERM_PROVIDER: "2.70.0"
+          image: "ubuntu-20.04"
+
+    pool:
+      vmImage: $(image)
+
     steps:
       - task: Bash@3
         name: "print_env"
