--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,11 +11,11 @@ variables: # Set the values on Azure DevOps build vars
 jobs:
   - job: Terraform_
     strategy:
-      matrix: # If github repo and azure devops project are both Public, the 3 jobs run in parallel. If Private, one at a time
+      matrix: # If github repo and azure devops project are BOTH Public, the 3 jobs run in parallel. If Private, one at a time
         min_supported_version:
           TERRAFORM_VERSION: "0.15.0"
           AZURERM_PROVIDER: "2.66.0"
-          image: "ubuntu-16.04"
+          image: "ubuntu-20.04"
         mid_supported_version:
           TERRAFORM_VERSION: "1.0.0"
           AZURERM_PROVIDER: "2.69.0"
