--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,8 @@ jobs:
         inputs:
           targetType: "inline"
           script: |
-            docker run -e ARM_TENANT_ID=$ARM_TENANT_ID -e ARM_CLIENT_ID=$ARM_CLIENT_ID -e ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET \
+            docker run --name "$TERRAFORM_VERSION:$AZURERM_PROVIDER" -e ARM_TENANT_ID=$ARM_TENANT_ID -e ARM_CLIENT_ID=$ARM_CLIENT_ID -e ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET \
             -e ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID "$TERRAFORM_VERSION:$AZURERM_PROVIDER"
+            docker cp "$TERRAFORM_VERSION:$AZURERM_PROVIDER":tests/opa/test_results/. ./opa/test_results/
+            ls -a ./opa/test_results/
           workingDirectory: "tests/"
