--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,6 @@ jobs:
           script: |
             docker run --name "$TERRAFORM_VERSION" -e ARM_TENANT_ID=$ARM_TENANT_ID -e ARM_CLIENT_ID=$ARM_CLIENT_ID -e ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET \
             -e ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID "$TERRAFORM_VERSION:$AZURERM_PROVIDER"
-            docker cp "$TERRAFORM_VERSION":tests/opa/test_results/. ./opa/test_results/
-            ls -a ./opa/test_results/
+            docker cp "$TERRAFORM_VERSION":tests/deployment/test_results/. ./opa/test_results/
+            ls -a ./deployment/test_results/
           workingDirectory: "tests/"
