--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,4 @@ jobs:
           searchFolder: "$(System.DefaultWorkingDirectory)"
           mergeTestResults: true
           failTaskOnFailedTests: false
-          testRunTitle: "OPA-Conftest - TF-Version:$tf_version"
-        env:
-          tf_version: $(TERRAFORM_VERSION)
+          testRunTitle: "OPA-Conftest - TF-Version ==>..."
