--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -12,8 +12,8 @@ ENV AZURERM_PROVIDER=$AZURERM_PROVIDER
 ENV TERRAFORM_VERSION=$TERRAFORM_VERSION
 
 # # # Install packages
-RUN apk add --no-cache --virtual  prepare_container 'jq<1.6-r1' \
-    && pip install yamllint && wget -q https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64 -O /usr/bin/yq && \
+RUN pip install --no-cache-dir jq==1.2.1 \
+    && pip install --no-cache-dir yamllint==1.26.2 && wget -q https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64 -O /usr/bin/yq && \
     chmod +x /usr/bin/yq && wget -q https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip \
     && unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && mv terraform /usr/bin/terraform && rm terraform_${TERRAFORM_VERSION}_linux_amd64.zip && wget -q https://github.com/open-policy-agent/conftest/releases/download/v${CONFTEST_VERSION}/conftest_${CONFTEST_VERSION}_Linux_x86_64.tar.gz && \
     tar xzf conftest_${CONFTEST_VERSION}_Linux_x86_64.tar.gz && mv conftest /usr/local/bin && rm -rf conftest_${CONFTEST_VERSION}_Linux_x86_64.tar.gz && rm /var/cache/apk/*
